@@ -2,6 +2,7 @@
   * do not crash if renewing repo while staying inside it
   * fixed bug in "system_with_timeout" (was always returning error) - required by ck-clsmith
   * added "skip_sort" to "select" and "select_uoa" functions
+  * added cfg['internal_keys'] to be able to check them in input
   * fixed minor bug when @file.json from CMD not found
 
 * V1.8.4
